--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,21 +20,21 @@ env:
 jobs:
   # Run tests.
   # See also https://docs.docker.com/docker-hub/builds/automated-testing/
-  test:
-    runs-on: ubuntu-latest
+#  test:
+#    runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
+#    steps:
+#      - uses: actions/checkout@v2
 
-      - name: Run tests
-        run: |
-          if [ -f docker-compose.test.yml ]; then
-            docker-compose --file docker-compose.test.yml build
-            docker-compose --file docker-compose.test.yml run sut
-          else
-            docker build . --file ubuntu19.10/Dockerfile
-            docker build . --file nvidia18.04/Dockerfile
-          fi
+#      - name: Run tests
+#        run: |
+#          if [ -f docker-compose.test.yml ]; then
+#            docker-compose --file docker-compose.test.yml build
+#            docker-compose --file docker-compose.test.yml run sut
+#          else
+#            docker build . --file ubuntu19.10/Dockerfile
+#            docker build . --file nvidia18.04/Dockerfile
+#          fi
 
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
@@ -66,19 +66,19 @@ jobs:
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
 
           # Strip git ref prefix from version
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+          #VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
 
           # Strip "v" prefix from tag name
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+          #[[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
 
           # Use Docker `latest` tag convention
-          [ "$VERSION" == "master" ] && VERSION=latest
+          #[ "$VERSION" == "master" ] && VERSION=latest
 
           echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
+          #echo VERSION=$VERSION
 
-          docker tag $IMAGE_NAME-ubuntu1910 $IMAGE_ID:$VERSION-ubuntu1910
-          #docker tag $IMAGE_NAME-ubuntu1804 $IMAGE_ID:$VERSION-nvidia1804
+          docker tag $IMAGE_NAME-ubuntu1910 $IMAGE_ID:4.3.1-ubuntu1910
+          #docker tag $IMAGE_NAME-ubuntu1804 $IMAGE_ID:4.3.1-nvidia1804
 
-          docker push $IMAGE_ID:$VERSION-ubuntu1910
-          #docker push $IMAGE_ID:$VERSION-nvidia1804
+          docker push $IMAGE_ID:4.3.1-ubuntu1910
+          #docker push $IMAGE_ID:4.3.1-nvidia1804
