--- a/.github/workflows/8.0nvidia24.04.yml
+++ b/.github/workflows/8.0nvidia24.04.yml
@@ -1,13 +1,13 @@
-name: 7.1_nvidia24.04
+name: 8.0_nvidia24.04
 
 on: [ workflow_dispatch ]
 
 env:
   IMAGE_NAME: docker-avisynthplus
   #set tagname
-  TAG_NAME: 7.1-nvidia2404
+  TAG_NAME: 8.0-nvidia2404
   #set targetdir
-  TARGET_DIR: 7.1/nvidia24.04
+  TARGET_DIR: 8.0/nvidia24.04
 
 jobs:
   # Push image to GitHub Packages.
@@ -28,8 +28,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        
       - name: Build and push
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: ${{ env.TARGET_DIR }}
           push: true
