--- a/.github/workflows/8.0ubuntu24.04.yml
+++ b/.github/workflows/8.0ubuntu24.04.yml
@@ -14,6 +14,11 @@ jobs:
   # See also https://docs.docker.com/docker-hub/builds/
   push:
     # Ensure test job passes before pushing image.
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
 
     runs-on: ubuntu-latest
 
@@ -38,3 +43,4 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.TAG_NAME }}
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
