--- a/.github/workflows/8.0ubuntu24.04.yml
+++ b/.github/workflows/8.0ubuntu24.04.yml
@@ -40,6 +40,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: ${{ env.TARGET_DIR }}
+          provenance: false
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.TAG_NAME }}
